--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -1,7 +1,36 @@
 .container {
   display: flex;
-  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
 }
+
+.block {
+  width: 200px;
+  height: 200px;
+  border: 2px transparent solid;
+}
+
+.sidebar {
+  position: absolute;
+  width: 240px;
+  background-color: #C6E2FF;
+  top: 0;
+  left: 0;
+}
+.gradient {
+  height: 200px;
+  background: linear-gradient(#C6E2FF, #edf1f7);
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 240px;
+  width: 100%;
+}
+
+
 
 .main-label {
   align-self: center;
@@ -11,7 +40,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 95vw;
+  width: 50vw;
+  align-self: center;
+  margin-bottom: 20px;
 }
 
 .actions__search {
@@ -25,9 +56,13 @@
   margin-left: 4px;
 }
 .actions__search input {
-  width: 85vw;
+  width: 45vw;
 }
 
 .actions__filter {
   align-self: flex-end;
+}
+
+.drink-list {
+  box-shadow: 7px -5px 13px 2px rgba(29, 89, 135, 0.36);
 }
