--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -1,6 +1,3 @@
-::ng-deep .nb-theme-default nb-layout .layout .layout-container .content .columns nb-layout-column {
-  padding-top: 0;
-}
 
 .container {
   display: flex;
@@ -21,6 +18,7 @@
   background-color: #C6E2FF;
   top: 0;
   left: 0;
+  margin-top: -36px;
 }
 
 .content-container {
