--- a/src/app/pages/drink-details/drink-details.component.css
+++ b/src/app/pages/drink-details/drink-details.component.css
@@ -11,9 +11,22 @@
 }
 
 .body-image {
-  width: 260px;
   float: left;
+  width: 260px;
   position: relative;
+  color: #262626;
+}
+
+.body-image a {
+  padding: 40px 20px 10px;
+  text-align: center;
+}
+
+.body-image a img {
+  display: inline-block;
+  max-height: 400px;
+  max-width: 100%;
+  height: auto;
 }
 
 .body-info {
@@ -125,4 +138,33 @@ li a:hover {
   margin-top: 40px;
   display: flex;
   justify-content: flex-end;
+}
+
+
+/* footer */
+.footer-description-title {
+  color: #002855;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 26px;
+}
+
+
+.footer-description-block {
+  width: 50%;
+  float: left;
+  padding: 7px 10% 0 20px;
+}
+
+.footer-description-block .title {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.footer-description-block p {
+  margin-bottom: 10px;
+  color: #464445;
+  letter-spacing: .037em;
 }
