--- a/src/app/pages/drink-details/drink-details.component.html
+++ b/src/app/pages/drink-details/drink-details.component.html
@@ -7,7 +7,7 @@
   <nb-card-body>
     <div class="body-image">
       <a>
-        <img src="{{drink.drinkPhotos[0]}}" alt="{{drink.name}}">
+        <img src="{{drink.drinkPhotos.mainPhoto}}" alt="{{drink.name}}">
       </a>
     </div>
     <div class="body-info">
