--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -39,7 +39,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 55vw;
   align-self: center;
   margin-bottom: 20px;
 }
@@ -79,4 +78,8 @@
 
 .drink-list {
   box-shadow: 7px -5px 13px 2px rgba(29, 89, 135, 0.36);
+}
+
+.tab {
+  margin: 40px 0 20px 0;
 }
