--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -49,11 +49,11 @@
             [ratingFromUser]="userDrink.rating"
             [degustationDate]="userDrink.dateOfDegustation"
             [review]="userDrink.review"
+            [id]="userDrink.id"
+            [userId]="userDrink.userId"
           ></app-drink-item>
         </div>
       </nb-tab>
     </nb-tabset>
-
-
   </div>
 </div>
