adding drink to my drink

--- a/src/app/components/drink-item/drink-item.component.html
+++ b/src/app/components/drink-item/drink-item.component.html
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="drink-actions" *ngIf="!status; else changeReview">
-      <button nbButton size="large" status="primary">Add to My Drinks</button>
+      <button nbButton size="large" status="primary" (click)="onAddToMyDrinksButton()">Add to My Drinks</button>
     </div>
     <ng-template #changeReview>
       <div class="drink-actions">
