--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,9 @@
-<p>profile works!</p>
+<nb-layout>
+  <nb-layout-header>
+    <app-header></app-header>
+  </nb-layout-header>
+
+  <nb-layout-column>
+    <p>Profile</p>
+  </nb-layout-column>
+</nb-layout>
