change layout and bug fix

--- a/src/app/pages/drink-details/drink-details.component.html
+++ b/src/app/pages/drink-details/drink-details.component.html
@@ -25,7 +25,7 @@
                 <div class="price-block__cost">{{drink.price | currency}}</div>
               </div>
               <div class="button-block">
-                <button nbButton status="primary" size="giant">Add to my drinks</button>
+                <button nbButton status="primary" size="giant" (click)="addToMyDrinks()">Add to my drinks</button>
               </div>
             </div>
             <div class="body-info-block__main">
