--- a/src/app/pages/user-groups/user-groups.component.html
+++ b/src/app/pages/user-groups/user-groups.component.html
@@ -1,1 +1,11 @@
-<p>user-groups works!</p>
+<nb-layout>
+  <nb-layout-header>
+    <app-header></app-header>
+  </nb-layout-header>
+  <nb-sidebar>
+    hi
+  </nb-sidebar>
+  <nb-layout-column>
+    <h3>hi</h3>
+  </nb-layout-column>
+</nb-layout>
